# aws-lambda-rag

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: streamlit_app.py
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md
eval/: test_questions.yaml
scripts/: 01_fetch_docs.py  02_build_index.py  03_test_retrieval.py
src/: __init__.py  chunking.py  embeddings.py  hybrid_retriever.py  llm_client.py  prompts.py  rag_pipeline.py  vector_store.py
tests/: test_chunking.py
